src/objects/Answer__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IsCorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCorrect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quiz__c</fullName>
        <label>Quiz</label>
        <referenceTo>Quiz__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Answer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>answer-{0000000}</displayFormat>
        <label>Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>